# ddns

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  FAQ.md  FILES.md  FINAL_REPORT.md  FINAL_STEPS.md  GETTING_STARTED.md  GITHUB_CHECKLIST.md  INSTALL.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PUSH_GUIDE.md  QUICKREF.md  QUICK_PUSH.md  README.md  README_CN.md  README_PUSH.md  RELEASE_CHECKLIST.md  SECURITY.md  SSH_SETUP.md  START_HERE.md  STEP_BY_STEP.md  TESTING_GUIDE.md  TEST_RESULTS.md  index.html  install.sh  package-lock.json  package.json  quick-install.sh  tailwind.config.js  (+1 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  domain.rs  ip_detection.rs  logging.rs  mod.rs  scheduler.rs
src-tauri/src/models/: config.rs  domain.rs  ip_info.rs  mod.rs
src-tauri/src/providers/: mod.rs  provider_trait.rs
src-tauri/src/providers/aliyun/: mod.rs
src-tauri/src/providers/aws/: mod.rs
src-tauri/src/providers/cloudflare/: mod.rs
src-tauri/src/providers/tencent/: mod.rs
src-tauri/src/services/: dns_updater.rs  ip_detector.rs  logger.rs  mod.rs  scheduler.rs
src-tauri/src/storage/: config_store.rs  database.rs  mod.rs  secure_store.rs
src-tauri/tests/: ip_detection_test.rs  provider_test.rs
(+29 files in other folders)
